// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account rendering works for condensed users 1`] = `
Object {
  "color": "#24292f",
  "fallback": "Wilhelm Klopp",
  "fields": Array [
    Object {
      "short": true,
      "title": "Company",
      "value": "@github ",
    },
    Object {
      "short": true,
      "title": "Location",
      "value": "London",
    },
  ],
  "footer": "<https://github.com/wilhelmklopp|@wilhelmklopp>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "thumb_url": "https://avatars1.githubusercontent.com/u/7718702?v=4",
  "title": "Wilhelm Klopp",
  "ts": 1401234498,
}
`;

exports[`Account rendering works for organizations 1`] = `
Object {
  "color": "#24292f",
  "fallback": "Kubernetes",
  "fields": Array [
    Object {
      "short": true,
      "title": "URL",
      "value": "http://kubernetes.io",
    },
    Object {
      "short": true,
      "title": "Repositories",
      "value": 51,
    },
  ],
  "footer": "<https://github.com/kubernetes|@kubernetes>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "text": "Kubernetes",
  "thumb_url": "https://avatars2.githubusercontent.com/u/13629408?v=4",
  "title": "Kubernetes",
  "ts": 1438624543,
}
`;

exports[`Account rendering works for users 1`] = `
Object {
  "color": "#24292f",
  "fallback": "Wilhelm Klopp",
  "fields": Array [
    Object {
      "short": true,
      "title": "Company",
      "value": "@github ",
    },
    Object {
      "short": true,
      "title": "Location",
      "value": "London",
    },
    Object {
      "short": true,
      "title": "URL",
      "value": "https://wilhelmklopp.com",
    },
    Object {
      "short": true,
      "title": "Repositories",
      "value": 28,
    },
  ],
  "footer": "<https://github.com/wilhelmklopp|@wilhelmklopp>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "text": "working on @uclapi, doing stuff @simplepoll 
I like APIs, emoji, and :partyparrot:",
  "thumb_url": "https://avatars1.githubusercontent.com/u/7718702?v=4",
  "title": "Wilhelm Klopp",
  "ts": 1401234498,
}
`;
